samples/_failures_safe/1761223311_7039a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04f0e0cc.c: In function ‘main’:
./samples/SAFE/__tmp_04f0e0cc.c:206:9: error: expected expression at end of input
  206 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_04f0e0cc.c:206:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_04f0e0cc.c:206:9: error: expected declaration or statement at end of input
